--- a/config/database.yml
+++ b/config/database.yml
@@ -14,10 +14,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
+  database: my_database_test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
+  database: my_database_production
   pool: 5
   timeout: 5000
